oh my god! I can handle auth!

--- a/resources/assets/admin/less/app.less
+++ b/resources/assets/admin/less/app.less
@@ -4,6 +4,7 @@ html, body, #app {
   font-family: 'Open Sans', sans-serif;
   height: 100%;
   width: 100%;
+  background-color: #fff;
 }
 
 h1.logo {
