--- a/resources/assets/admin/less/app.less
+++ b/resources/assets/admin/less/app.less
@@ -7,9 +7,15 @@ html, body, #app {
   background-color: #fff;
 }
 
+.form-group-lg {
+  margin-bottom: 20px;
+}
+
 h1.logo {
   color: #0e0e0e;
+  font-weight: 400;
   font-size: 20px;
+  margin-bottom: 30px;
   letter-spacing: 10px;
   text-transform: uppercase;
 }
