--- a/resources/assets/admin/less/app.less
+++ b/resources/assets/admin/less/app.less
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
-html, body, #app {
+html, body, .app {
   font-family: 'Open Sans', sans-serif;
   height: 100%;
   width: 100%;
