--- a/resources/assets/admin/less/app.less
+++ b/resources/assets/admin/less/app.less
@@ -11,6 +11,11 @@ html, body, .app {
   margin-bottom: 20px;
 }
 
+.input-group-addon {
+  display: table-cell;
+  vertical-align: bottom;
+}
+
 h1.logo {
   color: #0e0e0e;
   font-weight: 400;
